Fix layout collapse

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -649,7 +649,7 @@ h1 {
 
 .favorite-list {
   margin-top: 40px;
-  height: 190px;
+  padding-bottom: 200px;
 }
 
 .wom-box {
@@ -774,7 +774,7 @@ h1 {
 }
 
 .mypage-wear {
-  margin-left: 119px;
+  margin-left: 57px;
   padding-top: 20px;
 }
 
